--- a/config/boards/arm/ble_chiffre/ble_chiffre_defconfig
+++ b/config/boards/arm/ble_chiffre/ble_chiffre_defconfig
@@ -19,6 +19,8 @@ CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
 
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
 # Uncomment the following line to enable the OLED Display
 CONFIG_ZMK_DISPLAY=n
 
