--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,5 +47,19 @@ jobs:
         with:
           name: firmware
           path: odd43.uf2
-     
+
+      - name: West Build (FruitbarGB)
+        run: west build -s zmk/app -b fruitbargb -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: FruitbarGB DTS File
+        if: ${{ always() }}
+        run: cat -n build/zephyr/fruitbargb.dts.pre.tmp
+      - name: FruitbarGB Kconfig file
+        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
+      - name: Rename zmk.uf2
+        run: cp build/zephyr/zmk.uf2 fruitbargb.uf2
+      - name: Archive (FruitbarGB)
+        uses: actions/upload-artifact@v2
+        with:
+          name: firmware
+          path: fruitbargb.uf2
 
