--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,9 @@ jobs:
 
       - name: West Build (Odd43)
         run: west build -s zmk/app -b odd43 -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-
+        name: Odd43 DTS File
+        if: ${{ always() }}
+        run: cat -n build/zephyr/odd43.dts.pre.tmp
       - name: Odd43 Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
@@ -49,10 +51,9 @@ jobs:
 
       - name: West Build (FruitbarGB)
         run: west build -s zmk/app -b nice_nano -- -DSHIELD=fruitbargb -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: DTS File
+      - name: FruitbarGB DTS File
         if: ${{ always() }}
         run: cat -n build/zephyr/fruitbargb.dts.pre.tmp
-        run: cat -n build/zephyr/odd43.dts.pre.tmp
       - name: FruitbarGB Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
