--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: West Build (Odd43)
         run: west build -s zmk/app -b odd43 -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-        name: Odd43 DTS File
+      - name: Odd43 DTS File
         if: ${{ always() }}
         run: cat -n build/zephyr/odd43.dts.pre.tmp
       - name: Odd43 Kconfig file
@@ -48,7 +48,7 @@ jobs:
         with:
           name: firmware
           path: odd43.uf2
-
+          
       - name: West Build (FruitbarGB)
         run: west build -s zmk/app -b nice_nano -- -DSHIELD=fruitbargb -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
       - name: FruitbarGB DTS File
