i removed two dashes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,9 +48,9 @@ jobs:
         with:
           name: firmware
           path: odd43.uf2
-          
+
       - name: West Build (FruitbarGB)
-        run: west build -s zmk/app -b nice_nano -- -DSHIELD=fruitbargb -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+        run: west build -s zmk/app -b nice_nano -- -DSHIELD=fruitbargb -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
       - name: FruitbarGB DTS File
         if: ${{ always() }}
         run: cat -n build/zephyr/fruitbargb.dts.pre.tmp
